# Nicole_agent

./: main.py  pyproject.toml
backend/nicole/agents/: __init__.py  base.py  context.py  graph.py  state.py
backend/nicole/agents/buildin/: __init__.py  executor.py  graph_agent.py  orchestrator.py  planner.py  rag_agent.py  reflector.py  steward.py  synthesizer.py
backend/nicole/agents/harness/: __init__.py  event_bus.py  manager.py  scheduler.py
backend/nicole/agents/mcp/: __init__.py  client.py  manager.py
backend/nicole/agents/middleware/: __init__.py  knowledge.py  mcp.py  memory.py  skills.py
backend/nicole/agents/skills/: __init__.py  loader.py  repository.py
backend/nicole/agents/toolkits/: __init__.py  registry.py
backend/nicole/graph/: __init__.py  extractor.py  query_builder.py  reasoner.py  repository.py  schema.py
backend/nicole/knowledge/: __init__.py  chunking.py  embedding.py  rag.py  reranker.py
backend/nicole/knowledge/parser/: __init__.py  base.py  docx.py  manager.py  mineru_adapter.py  paddlex_adapter.py  pptx.py  rapidocr_adapter.py
backend/nicole/models/: __init__.py  agent_config.py  conversation.py  file.py  knowledge_chunk.py  note.py  user.py
backend/nicole/repositories/: __init__.py  agent_config_repo.py  base.py  conversation_repo.py  knowledge_chunk_repo.py  note_repo.py  user_repo.py
backend/nicole/schemas/: __init__.py  agent.py  chat.py  graph.py  knowledge.py  user.py
backend/nicole/servies/: __init__.py  agent_service.py  auth_service.py  chat_service.py  file_service.py  graph_service.py  knowledges_service.py  mcp_service.py  skills_service.py
backend/nicole/storage/: __init__.py  db.py  file_store.py  neo4j.py  redis.py
backend/nicole/utils/: __init__.py  crypto.py  helpers.py
