[project]
name = "Nicole"
version = "0.1.0"
description = "Nicole - 产业级个人笔记本多智能体系统"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nicole Team" }]

dependencies = [
    # === Web Framework ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",

    # === Agent Framework (LangGraph) ===
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-supervisor>=0.0.20",
    "langchain-core>=0.3.0",

    # === LLM & AI ===
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "httpx>=0.28.0",

    # === Embedding & Retrieval (BGE-M3) ===
    "FlagEmbedding>=1.2.0",
    "torch>=2.0.0",
    "sentence-transformers>=3.0.0",

    # === Database & Storage ===
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "redis[hiredis]>=5.2.0",
    "neo4j>=5.20.0",
    "alembic>=1.13.0",

    # === Async Task Queue ===
    "arq>=0.26.0",

    # === Document Parsing ===
    "unstructured>=0.16.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "marker-pdf>=1.0.0",
    "pdfminer.six>=20221105",
    "pymupdf>=1.24.0",
    "rapidocr-onnxruntime>=1.3.0",
    "paddlepaddle>=3.0.0",
    "paddlex>=3.0.0",

    # === Knowledge Graph ===
    "networkx>=3.3.0",

    # === Observability ===
    "langfuse>=4.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "structlog>=24.4.0",

    # === Auth & Security ===
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "bcrypt>=4.2.0",

    # === Utilities ===
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "rich>=13.8.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
lite = [
    "sqlite-vec>=0.1.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.uv.index]]
name = "huaweicloud"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple/"